--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/filecabinet
 spring.datasource.username=user
 spring.datasource.password=password
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
