--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #spring.jpa.open-in-view=false
 
+spring.jpa.properties.javax.persistence.validation.group.pre-persist=javax.validation.groups.Default
+spring.jpa.properties.javax.persistence.validation.group.pre-update=javax.validation.groups.Default
 
