--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-#spring.jpa.open-in-view=false
+spring.jpa.open-in-view=false
 
 spring.jpa.properties.javax.persistence.validation.group.pre-persist=javax.validation.groups.Default
 spring.jpa.properties.javax.persistence.validation.group.pre-update=javax.validation.groups.Default
