Add logging to project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 
 spring.jpa.properties.javax.persistence.validation.mode: none
+
+logging.level.com.igar15.filecabinet.service=DEBUG
+logging.file.name=log/app.log
+
