Add new server.servlet.context-path = /filecabinet

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.properties.javax.persistence.validation.mode: none
 logging.level.com.igar15.filecabinet.service=DEBUG
 logging.file.name=log/app.log
 
+server.servlet.context-path=/filecabinet
+
