--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 
+<!--		 mail -->
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
 <!--		tests-->
 
 		<dependency>
