--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,11 @@ logging.file.name=log/app.log
 
 server.servlet.context-path=/filecabinet
 
+# Mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.username=igarshl15@gmail.com
+spring.mail.password=5745650Gtx
+spring.mail.protocol=smtps
+support.email=igarshl15@gmail.com
+
