Add profile page

--- a/pom.xml
+++ b/pom.xml
@@ -74,8 +74,13 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+		</dependency>
 
-<!--				developer's tools-->
+
+		<!--				developer's tools-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
