Add @ControllerAdvice for DocumentController and ChangeNoticeController to upper case definite fields; Change param.error message on loginPage.html to "session.SPRING_SECURITY_LAST_EXCEPTION.message"; Add user name to log message;

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ server.servlet.context-path=/filecabinet
 # Mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=465
-spring.mail.username=igarshl15@gmail.com
-spring.mail.password=5745650Gtx
+spring.mail.username=niemi.filecabinet@gmail.com
+spring.mail.password=123456Gtx
 spring.mail.protocol=smtps
-support.email=igarshl15@gmail.com
+support.email=niemi.filecabinet@gmail.com
 
