Refactor file adding functional -> transfer BLOB to separate Entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.mail.password=123456Gtx
 spring.mail.protocol=smtps
 support.email=niemi.filecabinet@gmail.com
 
+spring.servlet.multipart.max-file-size=10MB
+
