Fix problem with conflict between bootstrap.js and jQuery.js -> remove button-toggles from radio-buttons fields

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,23 @@
+# JDBC properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/filecabinet
 spring.datasource.username=user
 spring.datasource.password=password
 
+# Show sql in console
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+# Disable hibernate session on view layer
 spring.jpa.open-in-view=false
 
+# Disable validation on persist
 spring.jpa.properties.javax.persistence.validation.mode=none
 
+# Logging
 logging.level.com.igar15.filecabinet.service=DEBUG
 logging.file.name=log/app.log
 
+# Application context-path
 server.servlet.context-path=/filecabinet
 
 # Mail
@@ -22,5 +28,9 @@ spring.mail.password=123456Gtx
 spring.mail.protocol=smtps
 support.email=niemi.filecabinet@gmail.com
 
+# File upload - max size
 spring.servlet.multipart.max-file-size=10MB
+
+# Disable thymeleaf cache
+spring.thymeleaf.cache=false
 
