Add cosmetic fixes to html pages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,5 +32,5 @@ support.email=niemi.filecabinet@gmail.com
 spring.servlet.multipart.max-file-size=10MB
 
 # Disable thymeleaf cache
-spring.thymeleaf.cache=false
+#spring.thymeleaf.cache=false
 
