Add flag to application.properties to turn on/off LoggingAspect; Add @ConditionalOnExpression into LoggingAspect to turn on/off this

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,6 @@ spring.servlet.multipart.max-file-size=10MB
 # Disable thymeleaf cache
 #spring.thymeleaf.cache=false
 
+# Turn on/off Logging aspect
+authentication.service.enabled=true
+
